[tool.poetry]
name = "ifpd"
version = "2.0.5"
description = "An iFISH probe design pipeline, with web interface included."
authors = ["Gabriele Girelli <gigi.ga90@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ggirelli/iFISH-Probe-Design"
repository = "https://github.com/ggirelli/iFISH-Probe-Design"
keywords = ["biology", "cell", "DNA", "RNA", "FISH", "fluorescence", "hybridization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
	"License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.6"
]
include = [
	"CHANGELOG.md",
	"LICENSE",
	"ifpd/interface/css/*",
	"ifpd/interface/fonts/*",
	"ifpd/interface/images/*",
	"ifpd/interface/js/*",
	"ifpd/interface/views/*",
	"ifpd/sections/probe_design/css/*",
	"ifpd/sections/probe_design/views/*"
]

[tool.poetry.dependencies]
python = "^3.7.1"
bottle = "^0.12.19"
joblib = "^1.0.1"
matplotlib = "^3.3.4"
numpy = "^1.20.1"
pandas = "^1.2.2"
pytest = "^6.2.2"
rich = ">=9.10,<11.0"
scipy = "^1.6.0"
Paste = "^3.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
"ifpd" = "ifpd.scripts.ifpd:main"

[tool.vulture]
paths = ["ifpd"]
min_confidence = 80
verbose = true
